WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
280018
REGRESSION(
283879@main
): When automatically resize is enabled, PDF unexpectedly scrolls when window is resized
https://bugs.webkit.org/show_bug.cgi?id=280018
Summary
REGRESSION(283879@main): When automatically resize is enabled, PDF unexpected...
Abrar Rahman Protyasha
Reported
2024-09-19 15:14:36 PDT
rdar://136311543
Attachments
Add attachment
proposed patch, testcase, etc.
Abrar Rahman Protyasha
Comment 1
2024-09-19 15:29:57 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33938
EWS
Comment 2
2024-09-19 17:12:37 PDT
Committed
283960@main
(5cdfc9f8b7ea): <
https://commits.webkit.org/283960@main
> Reviewed commits have been landed. Closing PR #33938 and removing active labels.
EWS
Comment 3
2024-09-20 07:15:08 PDT
Committed
283286.104@safari-7620-branch
(56ed55c5e340): <
https://commits.webkit.org/283286.104@safari-7620-branch
> Reviewed commits have been landed. Closing PR #1859 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug